tests/errors/syntax_missing_paren.js
/*
Expected Error:
SyntaxError
*/
if (true {
  console.log("hello");
}
